--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
     \begin{split}
         \vec r' = R\vec r+\vec vt+\vec r_0,\quad t'=t+t_0\\
         r_a' = \sum_{b} R_{ab}r_a+v_at+r_{0a},\quad t'=t+t_0,\\
-        \textup{R -- ортогональная матрица}
+        \textup{R --- ортогональная матрица}
     \end{split}
 \end{equation}
 
@@ -107,8 +107,8 @@
 
 \begin{equation}\label{eq:lorentz_coord}
     \begin{cases}
-    x'=\dfrac{x-vt}{\sqrt{1-\frac{v^2}{c^2}}}=\gamma\left(x-vt\right)\\
     t'=\dfrac{t-vx/c^2}{\sqrt{1-\frac{v^2}{c^2}}}=\gamma\left(t-\dfrac{v}{c^2}x\right)\\
+    x'=\dfrac{x-vt}{\sqrt{1-\frac{v^2}{c^2}}}=\gamma\left(x-vt\right)\\
     y'=y\\
     z'=z
     \end{cases}
@@ -125,7 +125,7 @@
     \end{cases}
 \end{equation}
 
-Преобразование Лоренца -- поворот в псевдоевклидовом четырёхмерном пространстве Минковского. В пространстве Минковского расстояние между двумя точками $\left(\vec{r_1}, t_1\right)$ и $\left(\vec{r_2}, t_2\right)$ называется интервалом и задаётся формулой
+Преобразование Лоренца --- поворот в псевдоевклидовом четырёхмерном пространстве Минковского. В пространстве Минковского расстояние между двумя точками $\left(x^0_1, x^1_1, x^2_1, x^3_1\right)=\left(t_1, \vec{r_1}\right)$ и $\left(x^0_2, x^1_2, x^2_2, x^3_2\right)=\left(t_2, \vec{r_2}\right)$ называется интервалом и задаётся формулой
 \begin{equation}
     S_{12}^2=c^2\left(t_1-t_2\right)^2-\left(\vec{r_1}-\vec{r_2}\right)^2
 \end{equation}
@@ -193,7 +193,7 @@
     \end{cases}
 \end{equation*}
 
-Видно, что физический смысл переменной $V$ -- введённая выше относительная скорость $v$ систем отсчёта $K$ и $K'$.
+Видно, что физический смысл переменной $V$ --- введённая выше относительная скорость $v$ систем отсчёта $K$ и $K'$.
 
 При переходе к классической механике $v\ll c$ преобразование Лоренца \eqref{eq:lorentz_coord} переходит в преобразование Галилея \eqref{eq:newton}:
 
@@ -215,9 +215,9 @@
 
 \subsection{Лоренцево сокращение}
 
-Система отсчёта -- совокупность начала отсчёта, прибора для измерения расстояния (``линейка'') и прибора для измерения времени (``часы'').
+Система отсчёта --- совокупность начала отсчёта, прибора для измерения расстояния (``линейка'') и прибора для измерения времени (``часы'').
 
-Пусть линейка лежит вдоль оси $x$ и покоится в $K'$, а в $K$ она движется, но положение её концов измеряется одновременно. Координаты её концов в $K'$ -- $\left(x_1', t_1'\right)$, $\left(x_2', t_2'\right)$, в $K$ -- $\left(x_1, t\right)$, $\left(x_2, t\right)$. Тогда
+Пусть линейка лежит вдоль оси $x$ и покоится в $K'$, а в $K$ она движется, но положение её концов измеряется одновременно. Координаты её концов в $K'$ --- $\left(x_1', t_1'\right)$, $\left(x_2', t_2'\right)$, в $K$ --- $\left(x_1, t\right)$, $\left(x_2, t\right)$. Тогда
 
 \begin{equation*}
     \begin{cases}
@@ -239,7 +239,7 @@
     \implies V=a_xa_ya_z = a_x^0a_y^0a_z^0/\gamma=V_0/\gamma
 \end{equation*}
 
-Рассмотрим теперь покоящиеся часы в два различных момента времени. Координаты этих точек в $K'$ -- $\left(x', t_1'\right)$, $\left(x', t_2'\right)$, в $K$ -- $\left(x_1, t_1\right)$, $\left(x_2, t)2\right)$. Тогда
+Рассмотрим теперь покоящиеся часы в два различных момента времени. Координаты этих точек в $K'$ --- $\left(x', t_1'\right)$, $\left(x', t_2'\right)$, в $K$ --- $\left(x_1, t_1\right)$, $\left(x_2, t_2\right)$. Тогда
 
 \begin{equation*}
     \begin{cases}
@@ -248,7 +248,7 @@
     \end{cases}
 \end{equation*}
 
-По аналогии с сокращением длины получаем лоренцевское сокращение времени -- в движущейся системе отсчёта время идёт медленнее: $\Delta t=\gamma\Delta t'=\gamma\Delta t_0$. Этот результат можно получить из условия сохранения интервала:
+По аналогии с сокращением длины получаем лоренцевское сокращение времени --- в движущейся системе отсчёта время идёт медленнее: $\Delta t=\gamma\Delta t'=\gamma\Delta t_0$. Этот результат можно получить из условия сохранения интервала:
 
 \begin{equation*}
     \begin{cases}
@@ -288,7 +288,7 @@
 Интервал $\Delta S'^2=c^2\Delta t'^2-\Delta x'^2$ между двумя событиями может принимать различные значения:
 
 \begin{enumerate}
-    \item $\Delta S'^2 > 0$ -- времениподобный интервал. Можно показать, что при таком значении интервала существует такая система отсчёта $K$, в которой эти события произошли в одном месте (покоящиеся в $K'$ часы): $\Delta x=0$. Действительно, предположим, что такая система отсчёта существует и двигается со скоростью $v$ относительно $K'$. Тогда
+    \item $\Delta S'^2 > 0$ --- времениподобный интервал. Можно показать, что при таком значении интервала существует такая система отсчёта $K$, в которой эти события произошли в одном месте (покоящиеся в $K'$ часы): $\Delta x=0$. Действительно, предположим, что такая система отсчёта существует и двигается со скоростью $v$ относительно $K'$. Тогда
     \begin{equation*}
         \begin{cases}
         \Delta S'^2 > 0 \implies |c\Delta t'| > |\Delta x'|\\
@@ -299,7 +299,7 @@
         \implies |c\Delta t'|=|-\Delta x'\frac{c}{v}|>|\Delta x'| \implies |v|<c
     \end{equation*}
     Условие $v<c$ справедливо для любой скорости реальной частицы, значит, такая система отсчёта существует.
-    \item $\Delta S'^2 < 0$ -- пространственноподобный интервал. При таком интервале существует система отсчёта, в котором события произошли одновременно (покоящаяся в $K'$ линейка): $\Delta t=0$. Аналогично рассуждениям выше получаем
+    \item $\Delta S'^2 < 0$ --- пространственноподобный интервал. При таком интервале существует система отсчёта, в котором события произошли одновременно (покоящаяся в $K'$ линейка): $\Delta t=0$. Аналогично рассуждениям выше получаем
     \begin{equation*}
         \begin{cases}
         \Delta S'^2 < 0 \implies |\Delta x'|>|c\Delta t'|\\
@@ -309,7 +309,7 @@
     \begin{equation*}
         \implies |\Delta x'|=|-\frac{c^2}{v}\Delta t'|>|c\Delta t'| \implies |v|<c
     \end{equation*}
-    \item $\Delta S'^2 = 0 \implies |c\Delta t'|=|\Delta x'| \implies \left(d\vec{r}/dt\right)^2=c^2$. Частица движется со скоростью $c$ -- это движение света.
+    \item $\Delta S'^2 = 0 \implies |c\Delta t'|=|\Delta x'| \implies \left(d\vec{r}/dt\right)^2=c^2$. Частица движется со скоростью $c$ --- это движение света.
 \end{enumerate}
 
 События могут быть причинно-связанными, если интервал между ними времениподобный или равен нулю (в таком случае происходит передача светового сигнала).
@@ -441,10 +441,10 @@
 Получим из \eqref{eq:movement} уравнения движения частицы в трёхмерных координатах, подставив вместо $\tensor{F}{^i^k}$ компоненты полей $\vec{E}$ и $\vec{H}$ в соответствии с \eqref{eq:fmatrix}:
 
 \begin{equation*}
-    mc\frac{d\tensor{u}{^0}}{ds}=\frac{d\left(mc\tensor{u}{^0}\right)}{ds}=\frac{d\left(\varepsilon/c\right)}{ds}=\frac{1}{c}\frac{d\varepsilon}{dt}\frac{dt}{ds}=\Biggm\lvert\frac{ds}{dt}=\frac{\sqrt{c^2dt^2-d\vec{r}^2}}{dt}=\sqrt{c^2-v^2}=\frac{c}{\gamma}\Biggm\rvert=\frac{\gamma}{c^2}\frac{d\varepsilon}{dt}=
+    mc\frac{d\tensor{u}{^0}}{ds}=\frac{d\left(mc\tensor{u}{^0}\right)}{ds}=\frac{d\left(\varepsilon/c\right)}{ds}=\frac{1}{c}\frac{d\varepsilon}{dt}\frac{dt}{ds}=\Biggm\lvert\frac{ds}{dt}=\frac{\sqrt{c^2dt^2-d\vec{r}^2}}{dt}=\sqrt{c^2-v^2}=\frac{c}{\gamma}\Biggm\rvert=
 \end{equation*}
 \begin{equation*}
-    =\frac{e}{c}\tensor{F}{^0^k}\tensor{u}{_k}=\frac{e}{c}\big(\tensor{F}{^0^0}\tensor{u}{_0}-\tensor{F}{^0^\alpha}\tensor{u}{_\alpha}\big)    =-\frac{e}{c}\left(-E_\alpha\right)\frac{v_\alpha\gamma}{c}=\frac{\gamma e}{c^2}\left(\vec{E}\vec{v}\right)
+    =\frac{\gamma}{c^2}\frac{d\varepsilon}{dt}=\frac{e}{c}\tensor{F}{^0^k}\tensor{u}{_k}=\frac{e}{c}\big(\tensor{F}{^0^0}\tensor{u}{_0}-\tensor{F}{^0^\alpha}\tensor{u}{_\alpha}\big)    =-\frac{e}{c}\left(-E_\alpha\right)\frac{v_\alpha\gamma}{c}=\frac{\gamma e}{c^2}\left(\vec{E}\vec{v}\right)
 \end{equation*}
 
 \begin{equation}\label{eq:emovement}
@@ -468,7 +468,7 @@
 
 Тензор электромагнитного поля
 
-\begin{equation}
+\begin{equation}\label{eq:f_tensor}
     \tensor{F}{^i^k} =
     \begin{pmatrix}
         0 & -E_x & -E_y & -E_z \\
@@ -478,12 +478,116 @@
     \end{pmatrix}
 \end{equation}
 
-Ковариантный вектор преобразуется по правилу $x^{i'}=\tensor{\Lambda}{^{i'}_{i}} x^i$. Значит, дважды ковариантный тензор $\tensor{F}{^i^k}$ преобразуется как $\tensor{F}{^{i'}^{k'}}=\tensor{\Lambda}{^{i'}_{k'}}\tensor{\Lambda}{^{k'}_{k}} \tensor{F}{^i^k}$.
+Ковариантный вектор преобразуется по правилу $x^{i'}=\tensor{\Lambda}{^{i'}_{i}} x^i$. Значит, дважды ковариантный тензор $\tensor{F}{^i^k}$ преобразуется как $\tensor{F}{^{i'}^{k'}}=\tensor{\Lambda}{^{i'}_{i}}\tensor{\Lambda}{^{k'}_{k}} \tensor{F}{^i^k}$, где $\Lambda$ --- матрица преобразований Лоренца \eqref{eq:lorentz_coord}. Проведём преобразование покомпонентно:
 
-...
+\begin{enumerate}
+    \item
+    \begin{equation*}
+        E_{x'}=\tensor{F}{_{0'}_{x'}}=\tensor{F}{^{x'}^{0'}}=\gamma\left(\tensor{F}{^{x}^{0'}}-\frac{v}{c}\tensor{F}{^{0}^{0'}}\right)=
+    \end{equation*}
+    \begin{equation*}
+        =\gamma^2\left(\tensor{F}{^{x}^{0}}-\frac{v}{c}\tensor{F}{^{x}^{x}}-\frac{v}{c}\left(\tensor{F}{^{0}^{0}}-\frac{v}{c}\tensor{F}{^{0}^{x}}\right)\right)=\gamma^2\tensor{F}{^{x}^{0}}\left(1-\frac{v^2}{c^2}\right)=\tensor{F}{_{0}_{x}}=E_x
+    \end{equation*}
+    \begin{equation*}
+        \implies \vec{E}_{\parallel'}=\vec{E}_\parallel
+    \end{equation*}
+    
+    \item
+    \begin{equation*}
+        \begin{cases}
+        E_{y'}=\tensor{F}{_{0'}_{y'}}=\tensor{F}{^{y'}^{0'}}=\gamma\left(\tensor{F}{^{y}^{0}}-\frac{v}{c}\tensor{F}{^{y}^{x}}\right)=E_y-\gamma\frac{v}{c}H_z\\
+        E_{z'}=\tensor{F}{_{0'}_{z'}}=\tensor{F}{^{z'}^{0'}}=\gamma\left(\tensor{F}{^{z}^{0}}-\frac{v}{c}\tensor{F}{^{z}^{x}}\right)=E_z+\gamma\frac{v}{c}H_y
+        \end{cases}
+    \end{equation*}
+    \begin{equation*}
+        \implies
+        \vec{E}_{\perp'}=\gamma\left(\vec{E}_\perp+\frac{1}{c}\lbrack\vec{v}\times\vec{H}\rbrack\right)
+    \end{equation*}
+    
+    \item ПОЛУЧИТЬ
+    \begin{equation*}
+        \implies \vec{H}_{\parallel'}=\vec{H}_\parallel
+    \end{equation*}
+    
+    \item ПОЛУЧИТЬ
+    \begin{equation*}
+        \implies \vec{H}_{\perp'}=\gamma\left(\vec{H}_\perp-\frac{1}{c}\lbrack\vec{v}\times\vec{E}\rbrack\right)
+    \end{equation*}
+\end{enumerate}
+
+Тензор электромагнитного поля \eqref{eq:f_tensor} полностью определяется шестью независимыми компонентами $\vec{E}$ и $\vec{H}$.
+
+Некоторые комбинации $\vec{E}$ и $\vec{H}$ инвариантны относительно системы отсчёта:
+
+\begin{enumerate}
+    \item 
+        \begin{equation*}
+        \tensor{F}{_i_k}\tensor{F}{^i^k}=\tensor{F}{_0_k}\tensor{F}{^0^k}+\tensor{F}{_\alpha_k}\tensor{F}{^\alpha^k}=\tensor{F}{_0_0}\tensor{F}{^0^0}+\tensor{F}{_0_\alpha}\tensor{F}{^0^\alpha}+\tensor{F}{_\alpha_0}\tensor{F}{^\alpha^0}+\tensor{F}{_\alpha_\beta}\tensor{F}{^\alpha^\beta}=
+        \end{equation*}
+        \begin{equation*}
+        =-2\vec{E}^2+2\vec{H}^2 \implies \tensor{F}{_i_k}\tensor{F}{^i^k}=2\left(H^2-E^2\right)
+        \end{equation*}
+    \item ПОЛУЧИТЬ
+        \begin{equation*}
+            \implies \tensor{e}{^i^j^k^l}\tensor{F}{_i_j}\tensor{F}{_k_l}=-8\left(\vec{E}\vec{H}\right)
+        \end{equation*}
+\end{enumerate}
 
 \subsection{Теорема Пойнтинга --- Умова}
 
-...
+Преобразуем два из четырёх уравнений Максвелла \eqref{eq:maxwell}:
+
+\begin{equation*}
+    \begin{cases}
+    rot\vec{E}=-\dfrac{1}{c}\dfrac{\partial\vec{H}}{\partial t}\\
+    rot\vec{H}=\dfrac{1}{c}\dfrac{\partial\vec{E}}{\partial t}+\dfrac{4\pi}{c}\vec{j}
+    \end{cases}
+\end{equation*}
+
+\begin{equation*}
+    \vec{E}rot\vec{H}-\vec{H}rot\vec{E}=\frac{1}{c}\left(\vec{E}\frac{\partial\vec{E}}{\partial t}+\vec{H}\frac{\partial\vec{H}}{\partial t}\right)+\frac{4\pi}{c}\vec{j}\vec{E}
+\end{equation*}
+\begin{equation*}
+    div\lbrack\vec{H}\times\vec{E}\rbrack=\frac{1}{2c}\frac{\partial}{\partial t}\left(\vec{E}^2+\vec{H^2}\right)+\frac{4\pi}{c}\vec{j}\vec{E}
+\end{equation*}
+
+\begin{equation}
+    \frac{\partial}{\partial t}\left(\frac{\vec{E}^2+\vec{H^2}}{8\pi}\right)+\frac{c}{4\pi}div\lbrack\vec{E}\times\vec{H}\rbrack=-\vec{j}\vec{E}
+\end{equation}
+
+Введём обозначения слагаемых:  $w=\dfrac{E^2+H^2}{8\pi}$ --- плотность энергии электромагнитного поля, $\vec{S}=\dfrac{c}{4\pi}\lbrack\vec{E}\times\vec{H}\rbrack$ --- плотность потока энергии электромагнитного поля, или вектор Пойтинга. Получаем уравнение Пойтинга --- Умова в дифференциальной форме:
+
+\begin{equation}\label{eq:pointing_diff}
+    \frac{\partial w}{\partial t}+div\vec{S}=-\vec{j}\vec{E}
+\end{equation}
+
+Для полного тока $\vec{j}$ верно выражение 
+
+\begin{equation*}
+    \vec{j}=\sum_a\vec{j}_a=\sum_a e_a\vec{v}_a\delta\left(\vec{r}-\vec{r}_a\left(t\right)\right),\quad\delta\left(\vec{r}-\vec{r}_0\right)=\delta\left(x-x_0\right)\delta\left(y-y_0\right)\delta\left(z-z_0\right)
+\end{equation*}
+
+Проинтегрируем уравнение \eqref{eq:pointing_diff} по объему некоторой области:
+
+\begin{enumerate}
+    \item 
+    \begin{equation*}
+        \int_V\frac{\partial w}{\partial t}dV=\frac{\partial}{\partial t}\int_V wdV=\frac{\partial}{\partial t}W
+    \end{equation*}
+    \item
+    \begin{equation*}
+        \int_V div\vec{S}dV=\oint_V \vec{S}d\vec{\sigma}
+    \end{equation*}
+    \item
+    \begin{equation*}
+        \int_V \vec{j}(\vec{r}_a)\vec{E}(\vec{r}_a)=-\sum_a e_a \vec{v}_a \vec{E}(\vec{r}_a)=-\sum_a\frac{d\varepsilon_a}{dt}=-\frac{d\varepsilon}{dt}
+    \end{equation*}
+\end{enumerate}
+
+Получаем уравнение Пойнтинга --- Умова в интегральной форме:
+
+\begin{equation}\label{eq:pointing_int}
+    \frac{\partial}{\partial t}\left(W+\varepsilon\right)+\oint_V \vec{S}d\vec{\sigma}=0
+\end{equation}
 
 \end{document}
